samples/_failures_safe/1761128359_770b65_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fd407f06.c: In function ‘main’:
./samples/SAFE/__tmp_fd407f06.c:139:25: error: ‘entry’ undeclared (first use in this function); did you mean ‘entries’?
  139 |     for (int i = 0; i < entry
      |                         ^~~~~
      |                         entries
./samples/SAFE/__tmp_fd407f06.c:139:25: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_fd407f06.c:139:30: error: expected ‘;’ at end of input
  139 |     for (int i = 0; i < entry
      |                              ^
      |                              ;
./samples/SAFE/__tmp_fd407f06.c:139:5: error: expected declaration or statement at end of input
  139 |     for (int i = 0; i < entry
      |     ^~~
